--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 
         "sylius/sylius": "^1.4",
         "coinbase/coinbase-commerce": "^1.0",
-        "ext-json": "*",
+        "ext-json": "*"
     },
     "require-dev": {
         "behat/behat": "^3.4",
