--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "^7.2",
 
-        "sylius/sylius": "~1.4.0",
+        "sylius/sylius": "^1.4.0",
         "coinbase/coinbase-commerce": "^1.0",
         "ext-json": "*"
     },
