--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "description": "Coinbase payment plugin for Sylius applications.",
     "license": "MIT",
     "require": {
-        "php": "^7.3 || ^7.4 || ^8.0",
+        "php": "^7.3 || ^7.4",
         "sylius/sylius": "~1.9.0 || ~1.10.0",
         "coinbase/coinbase-commerce": "^1.0",
         "ext-json": "*"
