--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
             matrix:
                 php: ["7.4"]
                 symfony: ["^4.4", "^5.2"]
-                sylius: ["1.9.6", "1.10.0"]
+                sylius: ["~1.9.6", "~1.10.0"]
                 node: ["10.x"]
                 mysql: ["8.0"]
 
