--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -158,6 +158,10 @@ jobs:
                 run: (cd tests/Application && bin/console doctrine:schema:validate)
 
             -
+                name: Run ECS
+                run: vendor/bin/ecs check src
+
+            -
                 name: Run PHPSpec
                 run: vendor/bin/phpspec run --ansi -f progress --no-interaction
 
