--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,6 +103,7 @@ jobs:
                 if: matrix.symfony != ''
                 run: |
                     composer config --no-plugins allow-plugins.symfony/thanks true
+                    composer config --no-plugins allow-plugins.dealerdirect/phpcodesniffer-composer-installer
                     composer global config --no-plugins allow-plugins.symfony/flex true
                     composer global require --no-progress --no-scripts --no-plugins "symfony/flex:^1.10"
                     composer config extra.symfony.require "${{ matrix.symfony }}"
