--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,6 +104,7 @@ jobs:
                 run: |
                     composer config --no-plugins allow-plugins.symfony/thanks true
                     composer config --no-plugins allow-plugins.dealerdirect/phpcodesniffer-composer-installer true
+                    composer config --no-plugins allow-plugins.phpstan/extension-installer true
                     composer global config --no-plugins allow-plugins.symfony/flex true
                     composer global require --no-progress --no-scripts --no-plugins "symfony/flex:^1.10"
                     composer config extra.symfony.require "${{ matrix.symfony }}"
