--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,12 @@
         "symfony/dom-crawler": "4.1.8",
         "symfony/routing": "4.1.8"
     },
+    "config": {
+         "sort-packages": true,
+         "allow-plugins": {
+             "symfony/thanks": true
+         }
+     },
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
