--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,10 @@
     "config": {
          "sort-packages": true,
          "allow-plugins": {
-             "symfony/thanks": true
+             "symfony/thanks": true,
+             "composer/package-versions-deprecated": true,
+             "dealerdirect/phpcodesniffer-composer-installer": true,
+             "phpstan/extension-installer": true
          }
      },
     "prefer-stable": true,
